// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridColumnGap renders 0 1`] = `
Array [
  .c0 {
  grid-column-gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnGap renders function 1`] = `
Array [
  .c0 {
  grid-column-gap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnGap renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-column-gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnGap renders negative number 1`] = `
Array [
  .c0 {
  grid-column-gap: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnGap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-column-gap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-gap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-column-gap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-gap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-gap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-column-gap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-column-gap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnGap renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-column-gap: July;
  }
}

@media April {
  .c0 {
    grid-column-gap: August;
  }
}

@media January {
  .c0 {
    grid-column-gap: September;
  }
}

@media April {
  .c0 {
    grid-column-gap: November;
  }
}

@media June {
  .c0 {
    grid-column-gap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-column-gap: July;
  }
}

@media April {
  .c0 {
    grid-column-gap: August;
  }
}

@media January {
  .c0 {
    grid-column-gap: September;
  }
}

@media April {
  .c0 {
    grid-column-gap: November;
  }
}

@media June {
  .c0 {
    grid-column-gap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-gap: January;
  }
}

@media April {
  .c0 {
    grid-column-gap: December;
  }
}

@media January {
  .c0 {
    grid-column-gap: April;
  }
}

@media April {
  .c0 {
    grid-column-gap: May;
  }
}

@media June {
  .c0 {
    grid-column-gap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-column-gap: January;
  }
}

@media April {
  .c0 {
    grid-column-gap: December;
  }
}

@media January {
  .c0 {
    grid-column-gap: April;
  }
}

@media April {
  .c0 {
    grid-column-gap: May;
  }
}

@media June {
  .c0 {
    grid-column-gap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnGap renders postitive number 1`] = `
Array [
  .c0 {
  grid-column-gap: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnGap renders string 1`] = `
Array [
  .c0 {
  grid-column-gap: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridColumnGap renders valid theme path 1`] = `
Array [
  .c0 {
  grid-column-gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-column-gap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
